--- a/domainlist.css
+++ b/domainlist.css
@@ -6,13 +6,14 @@
 }
 
 body{
-    background: url(images/5076404.jpg);
+    /* background-image: url(images/5076404.jpg); */
     justify-content: center;
     align-items: center;
-    background-position: center;
+    /* background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: fixed; */
+
 }
 
 .buy-btn a button{
@@ -38,5 +39,26 @@ body{
 }
 .home-btn{
     text-align: center;
-    margin-top: 30px;
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
+.wrapper{
+    position: relative;
+}
+.wrapper:before{
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100vh;
+    height: 100vh;
+    opacity: 0.2;
+    background-image: url(images/5076404.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.content{
+    position: relative;
 }
