--- a/domainlist.css
+++ b/domainlist.css
@@ -51,7 +51,7 @@ body{
     position: absolute;
     left: 0;
     top: 0;
-    width: 100vh;
+    width: 100%;
     height: 100vh;
     opacity: 0.2;
     background-image: url(images/5076404.jpg);
